[gd_scene load_steps=20 format=2]

[ext_resource path="res://enemy/sprites_enemy2/state1.png" type="Texture" id=1]
[ext_resource path="res://enemy/sprites_enemy2/eyes1.png" type="Texture" id=2]
[ext_resource path="res://enemy/sprites_enemy1/wheel5.png" type="Texture" id=3]
[ext_resource path="res://enemy/sprites_enemy1/wheel2.png" type="Texture" id=4]
[ext_resource path="res://enemy/sprites_enemy1/wheel4.png" type="Texture" id=5]
[ext_resource path="res://enemy/sprites_enemy1/wheel3.png" type="Texture" id=6]
[ext_resource path="res://enemy/sprites_enemy1/wheel6.png" type="Texture" id=7]
[ext_resource path="res://enemy/sprites_enemy1/wheel1.png" type="Texture" id=8]
[ext_resource path="res://enemy/sprites_enemy2/FollowerEnemy.gd" type="Script" id=9]
[ext_resource path="res://guns/gun2.png" type="Texture" id=10]
[ext_resource path="res://guns/EnemyGun.gd" type="Script" id=11]
[ext_resource path="res://enemy/sprites_enemy2/eyes2.png" type="Texture" id=12]
[ext_resource path="res://enemy/sprites_enemy2/state2.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "angry",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 46, 111.25 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 601, 377.75 )

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Eyes:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, -30 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "default"
length = 0.4
loop = true
step = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 13 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Eyes:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.199, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1, -32 ), Vector2( -1, -32 ), Vector2( -1, -27 ), Vector2( -1, -27 ) ]
}

[node name="FollowerEnemy" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 7
script = ExtResource( 9 )

[node name="Wheel" type="AnimatedSprite" parent="."]
position = Vector2( -2, 100 )
scale = Vector2( 0.104576, 0.104576 )
frames = SubResource( 6 )
frame = 1
playing = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1, -5 )
scale = Vector2( 0.613333, 0.613334 )
texture = ExtResource( 1 )

[node name="Eyes" type="AnimatedSprite" parent="."]
position = Vector2( -1, -30 )
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 8 )
animation = "angry"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 3.75 )
shape = SubResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 44, 109 )
enabled = true
cast_to = Vector2( 0, 11 )
collision_mask = 2

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8

[node name="AreaShape" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1, -263.25 )
shape = SubResource( 7 )

[node name="GunSprite" type="Sprite" parent="."]
position = Vector2( 4, 31 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 10 )
offset = Vector2( 5, 0 )
script = ExtResource( 11 )

[node name="Muzzle" type="Position2D" parent="GunSprite"]
position = Vector2( 21.2, -8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 9 )
anims/default = SubResource( 10 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
